--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "incremental": true
+    "incremental": true,
   },
   "include": [
     "src/**/*",
@@ -46,5 +46,8 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "paths": {
+    "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
+  }
 }
