--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serve": " webpack serve --config webpack.config.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -20,18 +21,26 @@
     "@types/react-dom": "18.0.10",
     "babel-preset-next": "^1.4.0",
     "next": "13.1.5",
+    "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#79ff1720f427858097f36b60c03b80efd0cb8814",
+    "path": "^0.12.7",
     "postcss-scss": "^4.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reconnecting-websocket": "^4.4.0",
     "sass": "^1.57.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "ws": "^8.12.0",
+    "xhr2": "^0.2.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "@next/eslint-plugin-next": "^13.1.5",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "babel-loader": "^9.1.2",
     "babel-plugin-styled-components": "^2.0.7",
+    "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -43,7 +52,16 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "prettier": "2.8.3",
-    "typescript": "^4.9.4"
+    "process": "^0.11.10",
+    "react-router-dom": "^6.8.1",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
