--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,5 +49,10 @@
   ],
   "paths": {
     "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
-  }
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
+  },
 }
