--- a/package.json
+++ b/package.json
@@ -3,38 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "serve": " webpack serve --config webpack.config.ts"
+    "dev": "webpack serve --config webpack.config.ts",
+    "build": "webpack"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.6",
-    "@mui/styled-engine-sc": "^5.11.0",
-    "@next/font": "13.1.5",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "babel-preset-next": "^1.4.0",
-    "next": "13.1.5",
-    "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#79ff1720f427858097f36b60c03b80efd0cb8814",
+    "css-loader": "^6.7.3",
+    "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#93e8434d355fae538a8df1bff81e3ac397f4396c",
     "path": "^0.12.7",
+    "postcss-loader": "^7.0.2",
     "postcss-scss": "^4.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reconnecting-websocket": "^4.4.0",
-    "sass": "^1.57.1",
+    "style-loader": "^3.3.1",
     "styled-components": "^5.3.6",
     "ws": "^8.12.0",
     "xhr2": "^0.2.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
-    "@next/eslint-plugin-next": "^13.1.5",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
@@ -52,14 +43,17 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "2.8.3",
-    "process": "^0.11.10",
     "react-router-dom": "^6.8.1",
+    "sass": "^1.58.0",
+    "sass-loader": "^13.2.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
+    "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
