--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-loader": "^7.0.2",
     "postcss-scss": "^4.0.6",
     "react": "18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "reconnecting-websocket": "^4.4.0",
     "style-loader": "^3.3.1",
