--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,8 @@
 {
   "extends": [
     "plugin:react/recommended",
-    "next/core-web-vitals",
     "airbnb-typescript",
     "standard-with-typescript",
-    "plugin:@next/next/recommended",
     "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
@@ -28,7 +26,7 @@
       "typescript": {}
     }
   },
-  "ignorePatterns": ["node_modules/", "build/", "coverage/", "next.config.js"],
+  "ignorePatterns": ["node_modules/", "build/", "coverage/"],
   "rules": {
     "prettier/prettier": ["error", { "singleQuote": true }],
     "import/extensions": [
