--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "build": "webpack"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "babel-preset-next": "^1.4.0",
     "css-loader": "^6.7.3",
-    "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#93e8434d355fae538a8df1bff81e3ac397f4396c",
+    "eslint-config-next": "^13.1.6",
+    "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#a3cc2b77ccb6c3781a3cb55e37470ef4eb927d8f",
     "path": "^0.12.7",
     "postcss-loader": "^7.0.2",
     "postcss-scss": "^4.0.6",
