--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@types/node": "18.11.18",
+    "@emurgo/cardano-serialization-lib-browser": "^11.3.0",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "babel-preset-next": "^1.4.0",
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "reconnecting-websocket": "^4.4.0",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.6",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "@types/node": "^18.14.0",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
@@ -50,6 +52,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "prettier": "2.8.3",
     "react-router-dom": "^6.8.1",
     "sass": "^1.58.0",
