--- a/package.json
+++ b/package.json
@@ -55,7 +55,12 @@
     "mini-css-extract-plugin": "^2.7.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "prettier": "2.8.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-make-communication": "^2.0.0",
+    "redux-saga": "^1.2.2",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "ts-loader": "^9.4.2",
