--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,7 @@
       "typescript": {}
     }
   },
-  "ignorePatterns": ["node_modules/", "build/", "coverage/"],
+  "ignorePatterns": ["node_modules/", "build/", "coverage/", "/dist"],
   "rules": {
     "prettier/prettier": ["error", { "singleQuote": true }],
     "import/extensions": [
