--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
-    "react-loading": "^2.0.3",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "reconnecting-websocket": "^4.4.0",
     "style-loader": "^3.3.1",
