--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "webpack serve --config webpack.config.ts",
     "build": "webpack",
-    "eslint": "npx eslint ."
+    "lint": "npx eslint ."
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.19.6",
