--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "webpack serve --config webpack.config.ts",
+    "dev-local": "webpack serve --env KUPO_HOST=http://localhost:1442",
     "build": "webpack",
     "lint": "npx eslint ."
   },
@@ -16,6 +17,7 @@
     "@types/react-dom": "18.0.10",
     "babel-preset-next": "^1.4.0",
     "css-loader": "^6.7.3",
+    "dotenv": "^16.0.3",
     "eslint-config-next": "^13.1.6",
     "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#3bae2c6368ffa1bc65535b6fb3de2ecb0e15e604",
     "path": "^0.12.7",
