--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "webpack serve --config webpack.config.ts --env ALLOW_ORIGIN=*",
-    "prod": "webpack serve --env ALLOW_ORIGIN=http://testnet.donat-pool.io --env KUPO_HOST=http://0.0.0.0:1442 --env NODE_ENV=production", 
+    "prod": "webpack serve --env ALLOW_ORIGIN=https://testnet.donat-pool.io --env KUPO_HOST=http://0.0.0.0:1442 --env WEB_SOCKET_URL=wss://testnet.donat-pool.io/ws, --env NODE_ENV=production", 
     "build": "webpack",
     "lint": "npx eslint ."
   },
@@ -18,7 +18,7 @@
     "babel-preset-next": "^1.4.0",
     "css-loader": "^6.7.3",
     "eslint-config-next": "^13.1.6",
-    "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#62dbe41cd2f48db5ad94b87f442695529bbc3324",
+    "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#bbf0fc170d197c62acbd24be0db2de87634a80f9",
     "path": "^0.12.7",
     "postcss-loader": "^7.0.2",
     "postcss-scss": "^4.0.6",
