--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-next": "^1.4.0",
     "css-loader": "^6.7.3",
     "eslint-config-next": "^13.1.6",
+    "html-react-parser": "^3.0.16",
     "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#7873d00f243a340604b6aa86d0024981f3709104",
     "path": "^0.12.7",
     "postcss-loader": "^7.0.2",
