--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-spinners": "^0.13.8",
     "reconnecting-websocket": "^4.4.0",
     "style-loader": "^3.3.1",
