--- a/package.json
+++ b/package.json
@@ -5,55 +5,27 @@
   "scripts": {
     "dev": "webpack serve --config webpack.config.ts --env ALLOW_ORIGIN=*",
     "prod": "webpack serve --env ALLOW_ORIGIN=https://testnet.donat-pool.io --env KUPO_HOST=http://0.0.0.0:1442 --env WEB_SOCKET_URL=wss://ogmios.donat-pool.io/ --env NODE_ENV=production",
-    "build": "webpack",
-    "lint": "npx eslint ."
-  },
-  "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@emurgo/cardano-serialization-lib-browser": "^11.3.0",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "babel-preset-next": "^1.4.0",
-    "css-loader": "^6.7.3",
-    "eslint-config-next": "^13.1.6",
-    "html-react-parser": "^3.0.16",
-    "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#3ff09c38ccbe82494f101ed7f17d6c55d20a5be6",
-    "path": "^0.12.7",
-    "postcss-loader": "^7.0.2",
-    "postcss-scss": "^4.0.6",
-    "react": "18.2.0",
-    "react-datepicker": "^4.10.0",
-    "react-dom": "18.2.0",
-    "react-router-hash-link": "^2.4.3",
-    "react-spinners": "^0.13.8",
-    "reconnecting-websocket": "^4.4.0",
-    "style-loader": "^3.3.1",
-    "styled-components": "^5.3.6",
-    "ws": "^8.12.0",
-    "xhr2": "^0.2.1"
+    "build": "webpack"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@types/node": "^18.14.0",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-styled-components": "^2.0.7",
     "copy-webpack-plugin": "^11.0.0",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "^8.32.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-config-standard-with-typescript": "^32.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint": "8.45.0",
+    "eslint-config-prettier": "8.9.0",
+    "eslint-config-standard-with-typescript": "37.0.0",
+    "eslint-import-resolver-typescript": "3.5.5",
+    "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-n": "16.0.1",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "7.33.0",
+    "eslint-plugin-react-hooks": "4.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
@@ -69,10 +41,35 @@
     "sass-loader": "^13.2.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@emurgo/cardano-serialization-lib-browser": "^11.3.0",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "babel-preset-next": "^1.4.0",
+    "css-loader": "^6.7.3",
+    "html-react-parser": "^3.0.16",
+    "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#3ff09c38ccbe82494f101ed7f17d6c55d20a5be6",
+    "path": "^0.12.7",
+    "postcss-loader": "^7.0.2",
+    "postcss-scss": "^4.0.6",
+    "react": "18.2.0",
+    "react-datepicker": "^4.10.0",
+    "react-dom": "18.2.0",
+    "react-router-hash-link": "^2.4.3",
+    "react-spinners": "^0.13.8",
+    "reconnecting-websocket": "^4.4.0",
+    "style-loader": "^3.3.1",
+    "styled-components": "^5.3.6",
+    "ws": "^8.12.0",
+    "xhr2": "^0.2.1"
   }
 }
