--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
-    "@types/node": "^18.14.0",
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.17",
+    "@types/react-dom": "18.2.7",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "babel-loader": "^9.1.2",
@@ -52,8 +54,6 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@emurgo/cardano-serialization-lib-browser": "^11.3.0",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
     "babel-preset-next": "^1.4.0",
     "css-loader": "^6.7.3",
     "html-react-parser": "^3.0.16",
