--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "mini-css-extract-plugin": "^2.7.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "prettier": "3.0.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.10.0",
+    "react-redux": "8.1.1",
+    "react-router-dom": "6.14.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-make-communication": "^2.0.0",
