--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "build": "webpack"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.18.6",
+    "@babel/preset-typescript": "7.18.6",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.62.0",
-    "babel-loader": "^9.1.2",
-    "babel-plugin-styled-components": "^2.0.7",
-    "copy-webpack-plugin": "^11.0.0",
-    "dotenv-webpack": "^8.0.1",
+    "babel-loader": "9.1.2",
+    "babel-plugin-styled-components": "2.0.7",
+    "copy-webpack-plugin": "11.0.0",
+    "dotenv-webpack": "8.0.1",
     "eslint": "8.45.0",
     "eslint-config-prettier": "8.9.0",
     "eslint-config-standard-with-typescript": "37.0.0",
@@ -28,48 +28,48 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.33.0",
     "eslint-plugin-react-hooks": "4.6.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.2",
-    "node-polyfill-webpack-plugin": "^2.0.1",
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "5.5.0",
+    "mini-css-extract-plugin": "2.7.2",
+    "node-polyfill-webpack-plugin": "2.0.1",
     "prettier": "3.0.0",
     "react-redux": "8.1.1",
     "react-router-dom": "6.14.2",
-    "redux": "^4.2.1",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-make-communication": "^2.0.0",
-    "redux-saga": "^1.2.2",
-    "sass": "^1.58.0",
-    "sass-loader": "^13.2.0",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
+    "redux": "4.2.1",
+    "redux-devtools-extension": "2.13.9",
+    "redux-make-communication": "2.0.0",
+    "redux-saga": "1.2.2",
+    "sass": "1.58.0",
+    "sass-loader": "13.2.0",
+    "ts-loader": "9.4.2",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.5",
+    "url-loader": "4.1.1",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.11.1"
   },
   "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@emurgo/cardano-serialization-lib-browser": "^11.3.0",
-    "babel-preset-next": "^1.4.0",
-    "css-loader": "^6.7.3",
-    "html-react-parser": "^3.0.16",
+    "@babel/plugin-transform-runtime": "7.19.6",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-react": "7.18.6",
+    "@emurgo/cardano-serialization-lib-browser": "11.3.0",
+    "babel-preset-next": "1.4.0",
+    "css-loader": "6.7.3",
+    "html-react-parser": "3.0.16",
     "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#3ff09c38ccbe82494f101ed7f17d6c55d20a5be6",
-    "path": "^0.12.7",
-    "postcss-loader": "^7.0.2",
-    "postcss-scss": "^4.0.6",
+    "path": "0.12.7",
+    "postcss-loader": "7.0.2",
+    "postcss-scss": "4.0.6",
     "react": "18.2.0",
-    "react-datepicker": "^4.10.0",
+    "react-datepicker": "4.10.0",
     "react-dom": "18.2.0",
-    "react-router-hash-link": "^2.4.3",
-    "react-spinners": "^0.13.8",
-    "reconnecting-websocket": "^4.4.0",
-    "style-loader": "^3.3.1",
-    "styled-components": "^5.3.6",
-    "ws": "^8.12.0",
-    "xhr2": "^0.2.1"
+    "react-router-hash-link": "2.4.3",
+    "react-spinners": "0.13.8",
+    "reconnecting-websocket": "4.4.0",
+    "style-loader": "3.3.1",
+    "styled-components": "5.3.6",
+    "ws": "8.12.0",
+    "xhr2": "0.2.1"
   }
 }
