--- a/package.json
+++ b/package.json
@@ -3,11 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "build": "webpack",
     "dev": "webpack serve --config webpack.config.ts --env ALLOW_ORIGIN=*",
-    "prod": "webpack serve --env ALLOW_ORIGIN=https://testnet.donat-pool.io --env KUPO_HOST=http://0.0.0.0:1442 --env WEB_SOCKET_URL=wss://ogmios.donat-pool.io/ --env NODE_ENV=production",
-    "build": "webpack"
+    "prod": "webpack serve --env ALLOW_ORIGIN=https://testnet.donat-pool.io --env KUPO_HOST=http://0.0.0.0:1442 --env WEB_SOCKET_URL=wss://ogmios.donat-pool.io/ --env NODE_ENV=production"
+  },
+  "dependencies": {
+    "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#3ff09c38ccbe82494f101ed7f17d6c55d20a5be6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-hash-link": "2.4.3",
+    "style-loader": "3.3.1",
+    "styled-components": "5.3.6"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "7.19.6",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
@@ -16,7 +27,9 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "babel-loader": "9.1.2",
     "babel-plugin-styled-components": "2.0.7",
+    "babel-preset-next": "1.4.0",
     "copy-webpack-plugin": "11.0.0",
+    "css-loader": "6.7.3",
     "dotenv-webpack": "8.0.1",
     "eslint": "8.45.0",
     "eslint-config-prettier": "8.9.0",
@@ -29,9 +42,12 @@
     "eslint-plugin-react": "7.33.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "file-loader": "6.2.0",
+    "html-react-parser": "3.0.16",
     "html-webpack-plugin": "5.5.0",
     "mini-css-extract-plugin": "2.7.2",
     "node-polyfill-webpack-plugin": "2.0.1",
+    "postcss-loader": "7.0.2",
+    "postcss-scss": "4.0.6",
     "prettier": "3.0.0",
     "react-redux": "8.1.1",
     "react-router-dom": "6.14.2",
@@ -48,25 +64,5 @@
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.11.1"
-  },
-  "dependencies": {
-    "@babel/plugin-transform-runtime": "7.19.6",
-    "@babel/preset-env": "7.20.2",
-    "@babel/preset-react": "7.18.6",
-    "@emurgo/cardano-serialization-lib-browser": "11.3.0",
-    "babel-preset-next": "1.4.0",
-    "css-loader": "6.7.3",
-    "html-react-parser": "3.0.16",
-    "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#3ff09c38ccbe82494f101ed7f17d6c55d20a5be6",
-    "postcss-loader": "7.0.2",
-    "postcss-scss": "4.0.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-hash-link": "2.4.3",
-    "reconnecting-websocket": "4.4.0",
-    "style-loader": "3.3.1",
-    "styled-components": "5.3.6",
-    "ws": "8.12.0",
-    "xhr2": "0.2.1"
   }
 }
