--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@emurgo/cardano-serialization-lib-browser": "^11.3.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "babel-preset-next": "^1.4.0",
@@ -59,7 +60,7 @@
     "mini-css-extract-plugin": "^2.7.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "prettier": "2.8.3",
-    "react-redux": "^8.0.5",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
