--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "stylelint:fix": "stylelint \"src/**/*.css\" --fix"
   },
   "dependencies": {
+    "html-react-parser": "4.2.0",
     "next": "13.4.12",
     "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#27f98c2b2162875e3192dec6d2799272dfce14e5",
     "react": "18.2.0",
@@ -20,14 +21,13 @@
     "redux-devtools-extension": "2.13.9",
     "redux-make-communication": "2.0.0",
     "redux-saga": "1.2.2",
-    "styled-components": "5.3.6"
+    "styled-components": "6.0.5"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "13.4.12",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
-    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
