--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "prettier-plugin-tailwindcss": "0.4.1",
     "sass": "1.58.0",
     "stylelint": "15.10.2",
+    "stylelint-config-recess-order": "4.3.0",
     "stylelint-config-standard": "34.0.0",
+    "stylelint-config-tailwindcss": "0.0.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
