--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "autoprefixer": "10.4.14",
+    "copy-webpack-plugin": "^11.0.0",
     "eslint": "8.46.0",
     "eslint-config-prettier": "8.10.0",
     "eslint-config-standard-with-typescript": "37.0.0",
