--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "prettify": "prettier . --write",
-    "eslint:fix": "eslint . --ext .ts,.tsx --fix",
-    "stylelint:fix": "stylelint \"src/**/*.css\" --fix"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
@@ -38,6 +36,8 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.33.1",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.2.3",
     "postcss": "8.4.27",
     "prettier": "3.0.1",
     "prettier-plugin-tailwindcss": "0.4.1",
