--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "eslint": "eslint ."
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
