--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "prepare": "husky install",
-    "eslint": "eslint ."
+    "eslint": "eslint .",
+    "type-check": "tsc"
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
