--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
-  "*.{ts,tsx,js,json,css,md,yml}": "prettier --check",
-  "*.{ts,tsx}": "eslint",
+  "*.{ts,tsx}": ["tsc --noEmit", "prettier --check", "eslint"],
+  "*.{js,json,css,md,yml}": "prettier --check",
   "*.css": "stylelint"
 }
