--- a/package.json
+++ b/package.json
@@ -23,19 +23,13 @@
     "@types/node": "20.4.8",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/eslint-plugin": "6.3.0",
+    "@typescript-eslint/parser": "6.3.0",
     "autoprefixer": "10.4.14",
     "copy-webpack-plugin": "11.0.0",
     "eslint": "8.46.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-config-standard-with-typescript": "37.0.0",
-    "eslint-import-resolver-typescript": "3.5.5",
-    "eslint-plugin-import": "2.28.0",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-n": "16.0.1",
-    "eslint-plugin-promise": "6.1.1",
+    "eslint-config-alloy": "5.1.0",
     "eslint-plugin-react": "7.33.1",
-    "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.3",
     "lint-staged": "13.2.3",
     "postcss": "8.4.27",
