refactored eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,18 @@
 {
-  "extends": ["alloy", "alloy/react", "alloy/typescript"],
+  "settings": {
+    "import/resolver": {
+      "typescript": true,
+      "node": true
+    }
+  },
+  "extends": [
+    "alloy",
+    "alloy/react",
+    "plugin:react/jsx-runtime",
+    "plugin:@next/next/recommended",
+    "alloy/typescript"
+  ],
+  "plugins": ["import"],
   "rules": {
     // "@typescript-eslint/explicit-function-return-type": 0,
     // "@typescript-eslint/strict-boolean-expressions": 0,
