--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "copy-webpack-plugin": "11.0.0",
     "eslint": "8.46.0",
     "eslint-config-alloy": "5.1.0",
+    "eslint-import-resolver-typescript": "3.5.5",
+    "eslint-plugin-import": "2.28.0",
     "eslint-plugin-react": "7.33.1",
     "husky": "8.0.3",
     "lint-staged": "13.2.3",
