added eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
       "typescript": true
     }
   },
+  "eslint.workingDirectories": [{ "mode": "auto" }],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx"],
