--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,11 +23,7 @@
     "import/order": [
       "error",
       {
-        "groups": [
-          ["builtin", "external"],
-          ["internal"],
-          ["parent", "sibling", "index"]
-        ],
+        "groups": [["builtin", "external"], ["internal"], ["parent", "sibling", "index"]],
         "newlines-between": "always",
         "alphabetize": {
           "order": "asc",
