--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
+    "classnames": "^2.3.2",
     "html-react-parser": "4.2.1",
     "next": "13.4.13",
     "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#51077fa6eb9876cb0a82f259800bcd92fe419f94",
