changed media rule for scss

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,5 +3,8 @@
     "stylelint-config-standard",
     "stylelint-config-recess-order",
     "stylelint-config-tailwindcss"
-  ]
+  ],
+  "rules": {
+    "media-feature-range-notation": "prefix"
+  }
 }
