action donats and arrow edited

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,10 +1,7 @@
 {
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-config-recess-order",
-    "stylelint-config-tailwindcss"
-  ],
+  "extends": ["stylelint-config-standard", "stylelint-config-recess-order", "stylelint-config-tailwindcss"],
   "rules": {
-    "media-feature-range-notation": "prefix"
+    "media-feature-range-notation": "prefix",
+    "at-rule-no-unknown": null
   }
 }
