--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "1.7.16",
     "@reduxjs/toolkit": "1.9.5",
     "html-react-parser": "4.2.1",
     "next": "13.4.16",
