--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#8ee27dea6f7c08a6a1491c49f9c5df7fdaf9f1e4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "8.1.2",
-    "styled-components": "6.0.7"
+    "react-redux": "8.1.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "13.4.13",
