--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@headlessui/react": "1.7.16",
     "@reduxjs/toolkit": "1.9.5",
+    "classnames": "2.3.2",
     "html-react-parser": "4.2.1",
     "next": "13.4.16",
     "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#8ee27dea6f7c08a6a1491c49f9c5df7fdaf9f1e4",
