--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@headlessui/react": "1.7.17",
     "@reduxjs/toolkit": "1.9.5",
+    "axios": "1.5.0",
     "classnames": "2.3.2",
     "html-react-parser": "4.2.1",
     "next": "13.4.19",
