--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "offchain": "git+ssh://git@github.com:fullstack-development/donat-pool-offchain.git#8ee27dea6f7c08a6a1491c49f9c5df7fdaf9f1e4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.45.4",
     "react-redux": "8.1.2"
   },
   "devDependencies": {
