--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@headlessui/react": "1.7.17",
+    "@react-hookz/web": "23.1.0",
     "@reduxjs/toolkit": "1.9.5",
     "axios": "1.5.0",
     "classnames": "2.3.2",
