--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.46.1",
-    "react-redux": "8.1.2"
+    "react-redux": "8.1.2",
+    "react-use": "17.4.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "13.4.19",
